crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-10.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    GetField {
        opt: true,
        target: GetVar {
            name: "a",
        },
        key: "b",
    },
)
