crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-11.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    GetField(
        GetField {
            opt: true,
            target: GetField(
                GetField {
                    opt: true,
                    target: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                    key: "b",
                },
            ),
            key: "c",
        },
    ),
)
