crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-12.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        GetIndex {
            opt: true,
            target: GetVar {
                name: "a",
            },
            key: GetVar {
                name: "b",
            },
        },
    ),
    [],
)
