crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-13.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        GetIndex {
            opt: true,
            target: GetIndex {
                opt: true,
                target: GetVar {
                    name: "a",
                },
                key: GetVar {
                    name: "b",
                },
            },
            key: GetVar {
                name: "c",
            },
        },
    ),
    [],
)
