crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-14.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Call {
    opt: true,
    target: GetVar {
        name: "a",
    },
    args: [
        GetVar {
            name: "b",
        },
    ],
}
