crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-15.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Call {
            opt: true,
            target: Call {
                opt: true,
                target: GetVar {
                    name: "a",
                },
                args: [
                    GetVar {
                        name: "b",
                    },
                ],
            },
            args: [
                GetVar {
                    name: "c",
                },
            ],
        },
    ),
    [],
)
