crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-16.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Cast(
        Cast {
            opt: true,
            target: GetVar(
                GetVar {
                    name: "a",
                },
            ),
            ty: Path(
                Path {
                    segments: [
                        Segment {
                            ident: "A",
                            generic_args: [],
                        },
                    ],
                },
            ),
        },
    ),
)
