crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-17.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Cast {
        opt: true,
        target: Cast {
            opt: true,
            target: GetVar {
                name: "a",
            },
            ty: Path {
                segments: [
                    Segment {
                        ident: "A",
                        generic_args: [],
                    },
                ],
            },
        },
        ty: Path {
            segments: [
                Segment {
                    ident: "B",
                    generic_args: [],
                },
            ],
        },
    },
)
