crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-19.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
GetField {
    opt: false,
    target: GetVar {
        name: "a",
    },
    key: "0",
}
