crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    GetIndex {
        opt: false,
        target: GetVar {
            name: "a",
        },
        key: GetVar {
            name: "b",
        },
    },
)
